--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,8 @@ services:
 
   mongo:
     image: mongo:4.2.3
+    ports:
+      - "27017:27017"
     environment:
       - "MONGO_INITDB_ROOT_USERNAME:root"
       - "MONGO_INITDB_ROOT_PASSWORD:root"
