--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
-    "express-static-gzip": "^2.0.6"
+    "express-static-gzip": "^2.0.6",
+    "mongodb": "^3.5.3",
+    "morgan": "^1.9.1"
   }
 }
