--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.6",
+    "moment": "^2.24.0",
     "mongodb": "^3.5.3",
     "morgan": "^1.9.1"
   }
