- moved branch name to tag of docker image

--- a/compose.yml
+++ b/compose.yml
@@ -16,7 +16,7 @@ services:
       - "ME_CONFIG_MONGODB_ADMINUSERNAME:root"
       - "ME_CONFIG_MONGODB_ADMINPASSWORD:root"
   iotapp:
-    image: ragulmathawa/iotapp-master:1.0-1-gd5bf10a
+    image: ragulmathawa/iotapp:master-1.0-1-gd5bf10a
     ports:
       - "3000:3000"
     environment:
